cluster/argocd/sources/keycloak/keycloak.yaml

apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-service
  namespace: keycloak
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: keycloak-postgres
  type: ClusterIP
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgres
  namespace: keycloak
spec:
  serviceName: keycloak-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: keycloak-postgres
          image: postgres:latest          
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-volume-claim
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
  volumeClaimTemplates:
    - metadata:
        name: postgres-volume-claim
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---

apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        resources:
            limits:
              memory: 800Mi
              cpu: "1"
            requests:
              memory: 500Mi
              cpu: "0.5"
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:  
    cert-manager.io/cluster-issuer: binesty-ca-issuer
    cert-manager.io/duration: 2160h # 90d
    cert-manager.io/renew-before: 360h # 15d        
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: keycloak-ingress
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.binesty.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
  tls:
    - hosts:
        - keycloak.binesty.io
      secretName: keycloak-binesty-certificate-key-pair              
---
